fixed issue where first nav item in dropdown wasn't being horizontally aligned on smaller screens

--- a/src/styles/components/_hamburger-menu.sass
+++ b/src/styles/components/_hamburger-menu.sass
@@ -5,7 +5,7 @@
   display: none
   position: relative
   z-index: 2
-  margin-bottom: calculate-rem(60px)
+  padding-bottom: calculate-rem(60px)
   @include square(40px)
   @include breakpoint(medium down)
     display: block
